--- a/AuthenticationService/build.gradle
+++ b/AuthenticationService/build.gradle
@@ -16,8 +16,16 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-actuator'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'org.springframework.boot:spring-boot-starter-web:2.7.1'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.7.1'
+	implementation 'org.springframework.boot:spring-boot-starter-validation:2.7.1'
+	implementation 'mysql:mysql-connector-java:8.0.23'
+	implementation 'org.projectlombok:lombok:1.18.22'
+	implementation 'org.mapstruct:mapstruct:1.4.2.Final'
+	implementation 'com.google.guava:guava:31.1-jre'
+	annotationProcessor "org.mapstruct:mapstruct-processor:1.4.2.Final"
+	annotationProcessor 'org.projectlombok:lombok:1.18.22'
+	annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
 }
 
 tasks.named('test') {
